--- a/EmployeeTable/packages.config
+++ b/EmployeeTable/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap" version="4.2.1" targetFramework="net461" />
+  <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.9.8" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework.zh-Hant" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.4" targetFramework="net461" />
@@ -15,9 +19,12 @@
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.TypeScript.Compiler" version="3.1.5" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.TypeScript.MSBuild" version="3.2.3" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
