--- a/EmployeeTable/Web.config
+++ b/EmployeeTable/Web.config
@@ -63,6 +63,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="EmployeeDataEntities" connectionString="data source=.\SQLEXPRESS;initial catalog=EmployeeData;Integrated Security=SSPI;" />
+    <add name="EmployeeDataEntities" connectionString="data source=.\SQLEXPRESS;initial catalog=EmployeeData;User ID=test;Password=test;"
+    providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
